fix: Dark mode toggle to work correctly

--- a/src/assets/styles/components/hero.scss
+++ b/src/assets/styles/components/hero.scss
@@ -12,7 +12,7 @@
       &__text,
       &__image {
         min-height: 80vh;
-        width: 100%;
+        width: calc(100% + 2em);
         grid-area: stack;
       }
 
